[package]
name = "bloxtool"
version = "0.0.55"
include = ["src/*"]

[dependencies]
rust-ini = "0.12"
dirs = "1.0.4"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.31"
reqwest = "0.9.2"
mockito =  { git = "https://github.com/lipanski/mockito" }
clap = {version = "2.32", features = ["yaml"]}